bard ai suggestion added. apikey is not in the code.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <div id="citycontainer">
 
             </div>
+            <div id="airesponse">
+
+            </div>
             <h2>Hourly Info</h2>
             <div id="hourlydivcontainer">
                 
